<?xml version="1.0"?>
<package format="3">
  <name>ur5_control</name>
  <version>0.0.0</version>
  <description>UR5e control package with Gazebo simulation and RViz2 visualization</description>
  <maintainer email="katakamrupendra@gmail.com">rupendra</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>master_ros2</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>
  <depend>urdf</depend>

  <exec_depend>ur_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
